[package]
name = "identity"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "Apache-2.0"
description = "Identity service for managing identity-related application workflows."
repository = ""
readme = "README.md"
keywords = ["identity", "service"]
categories = ["authentication"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "identity"
path = "src/main.rs"

[dependencies]
axum = "0.8.9"
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "net"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
